src/test/out/c20-implicit-fdecl.c
Table: Ids
EID	NAME	READONLY	UNDEFMACRO	MACRO	MACROARG	CPPCONST	CPPSTRVAL	ORDINARY	SUETAG	SUMEMBER	LABEL	TYPEDEF	ENUM	YACC	FUN	CSCOPE	LSCOPE	UNUSED
49	a	0	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	0
91	MAXDIGIT	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	1
149	d	0	0	0	0	0	0	1	0	0	0	0	0	0	1	1	1	0
279	main	1	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	0
331	x	0	0	0	0	0	0	1	0	0	0	0	0	0	0	0	1	1
509	e	0	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	0
571	qqq	0	0	0	0	0	0	1	0	0	0	0	0	0	0	0	1	1
649	b	0	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	0
719	c	0	0	0	0	0	0	1	0	0	0	0	0	0	1	1	1	0
891	foo	0	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	1
2019	xa	0	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	0
2089	xa1	0	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	0
2159	xa2	0	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	0
2229	xa3	0	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	0
2749	xb2	0	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	0
2889	xb	0	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	0
2975	__DATE__	1	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	1
3259	main2	0	0	0	0	0	0	1	0	0	0	0	0	0	1	0	1	1
3295	__TIME__	1	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	1
3575	__FILE__	1	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	1
3865	__LINE__	1	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	1
4055	__STDC__	1	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	1
5355	_cscout_dummy1	1	0	0	0	0	0	1	0	0	0	0	0	0	1	1	0	0
Table: Tokens
FID	FOFFSET	EID
2	297	2975
2	329	3295
2	357	3575
2	386	3865
2	405	4055
2	471	279
2	535	5355
2	558	5355
4	4	49
4	14	149
4	27	279
4	50	509
4	57	49
4	64	649
4	71	719
4	78	649
4	105	649
4	133	719
4	161	149
4	189	509
4	201	2019
4	208	2089
4	215	2159
4	222	2229
4	236	2089
4	250	2159
4	264	2229
4	274	2749
4	288	2889
4	295	2089
4	302	2749
4	309	2019
4	325	3259
4	338	2019
4	346	2889
5	8	91
5	32	331
5	43	279
5	56	571
5	88	891
Table: Rest
FID	FOFFSET	CODE
2	287	\u0000a\u0000a#define 
2	305	  
2	320	\u0000a#define 
2	337	 
2	348	\u0000a#define 
2	365	 
2	377	\u0000a#define 
2	394	 1\u0000a#define 
2	413	 1\u0000a\u0000a
2	466	\u0000aint 
2	475	();\u0000a
2	522	\u0000astatic void 
2	549	(void) { 
2	572	(); }\u0000a
3	152	\u0000a\u0000a\u0000a#pragma includepath 
3	195	\u0000a
3	239	\u0000astatic void _cscout_dummy2(void) { _cscout_dummy2(); }\u0000a
4	0	int 
4	5	();\u0000d\u0000aint 
4	15	();\u0000d\u0000a\u0000d\u0000aint\u0000d\u0000a
4	31	()\u0000d\u0000a{\u0000d\u0000a	extern int 
4	51	();\u0000d\u0000a	
4	58	();\u0000d\u0000a	
4	65	();\u0000d\u0000a	
4	72	();\u0000d\u0000a	
4	79	();\u0000d\u0000a	return 0;\u0000d\u0000a}\u0000d\u0000a\u0000d\u0000aint 
4	106	() {return 0;}\u0000d\u0000astatic int 
4	134	() {return 0;}\u0000d\u0000astatic int 
4	162	() {return 0;}\u0000d\u0000aextern int 
4	190	();\u0000d\u0000a\u0000d\u0000aint 
4	203	() { 
4	211	(); 
4	218	(); 
4	225	(); }\u0000d\u0000aint 
4	239	() {}\u0000d\u0000aint 
4	253	() {}\u0000d\u0000aint 
4	267	() {}\u0000d\u0000a
4	277	() {}\u0000d\u0000aint 
4	290	() { 
4	298	(); 
4	305	(); 
4	311	(); }\u0000d\u0000a\u0000d\u0000aint\u0000d\u0000a
4	330	()\u0000d\u0000a{\u0000d\u0000a	
4	340	();\u0000d\u0000a	
4	348	();\u0000d\u0000a}\u0000d\u0000a
5	0	#define 
5	16	 11\u0000d\u0000aextern int 
5	33	;\u0000d\u0000aextern 
5	47	();\u0000d\u0000aint 
5	59	;\u0000d\u0000a\u0000d\u0000a
5	86	\u0000d\u0000a
5	91	() {\u0000d\u0000a	
5	116	}\u0000d\u0000a\u0000d\u0000a
Table: Projects
PID	NAME
18	unspecified
19	Prj1
20	Prj2
Table: IdProj
EID	PID
49	19
149	19
279	19
509	19
649	19
719	19
2019	19
2089	19
2159	19
2229	19
2749	19
2889	19
2975	19
3259	19
3295	19
3575	19
3865	19
4055	19
5355	19
49	20
91	20
149	20
279	20
331	20
509	20
571	20
649	20
719	20
891	20
2019	20
2089	20
2159	20
2229	20
2749	20
2889	20
2975	20
3259	20
3295	20
3575	20
3865	20
4055	20
5355	20
Table: Files
FID	NAME	RO
2	host-defs.h	1
3	host-incs.h	1
4	c20-implicit-fdecl.c	0
5	prj2.c	0
Table: Filemetrics
FID	PRECPP	NCHAR	NCCOMMENT	NSPACE	NLCOMMENT	NBCOMMENT	NLINE	MAXLINELEN	MAXSTMTLEN	MAXSTMTNEST	MAXBRACENEST	MAXBRACKNEST	BRACENEST	BRACKNEST	NULINE	NPPDIRECTIVE	NPPCOND	NPPFMACRO	NPPOMACRO	NTOKEN	NSTMT	NOP	NUOP	NNCONST	NCLIT	NSTRING	NPPCONCATOP	NPPSTRINGOP	NIF	NELSE	NSWITCH	NCASE	NDEFAULT	NBREAK	NFOR	NWHILE	NDO	NCONTINUE	NGOTO	NRETURN	NASM	NTYPEOF	NPID	NFID	NMID	NID	NUPID	NUFID	NUMID	NUID	NLABEL	NMACROEXPANDTOKEN	NCOPIES	NINCFILE	NPFUNCTION	NFFUNCTION	NPVAR	NFVAR	NAGGREGATE	NAMEMBER	NENUM	NEMEMBER
2	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	16	0	1	1	NULL	NULL	NULL	NULL	NULL	NULL	NULL	18	2	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	0	0	NULL	0	0	NULL	NULL	NULL	0	1	0	0	0	0	0	0
2	1	548	367	29	0	3	22	61	47	NULL	1	1	0	0	0	5	0	0	5	37	2	0	0	2	0	3	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	1	2	5	8	1	1	5	7	0	0	1	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	NULL
3	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	15	0	1	1	NULL	NULL	NULL	NULL	NULL	NULL	NULL	0	1	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	0	0	NULL	0	0	NULL	NULL	NULL	0	0	0	0	0	0	0	0
3	1	243	187	13	0	2	13	48	28	NULL	1	1	0	0	0	1	0	0	0	16	1	0	0	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	1	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	NULL
4	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	54	0	1	1	NULL	NULL	NULL	NULL	NULL	NULL	NULL	150	20	0	0	4	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	4	0	0	54	8	NULL	54	13	2	NULL	13	0	NULL	NULL	NULL	9	2	0	0	0	0	0	0
4	1	315	0	109	0	0	32	36	54	NULL	1	1	0	0	0	0	0	0	0	149	20	0	0	4	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	4	0	0	27	4	0	27	13	2	0	13	0	0	1	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	NULL
5	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	8	0	1	1	NULL	NULL	NULL	NULL	NULL	NULL	NULL	18	3	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	4	0	NULL	4	4	0	NULL	4	0	NULL	NULL	NULL	1	0	2	0	0	0	0	0
5	1	106	34	26	2	0	11	21	14	NULL	1	1	0	0	0	1	0	0	1	21	3	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	4	0	1	5	4	0	1	5	0	0	1	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	NULL
Table: FileProj
FID	PID
2	19
3	19
4	19
1	20
2	20
3	20
4	20
5	20
Table: Definers
PID	CUID	BASEFILEID	DEFINERID
19	4	4	2
20	4	4	2
20	5	5	2
Table: Includers
PID	CUID	BASEFILEID	INCLUDERID
19	2	2	1
19	4	3	1
19	4	4	1
20	2	2	1
20	2	2	1
20	4	3	1
20	4	4	1
20	5	3	1
20	5	5	1
Table: Providers
PID	CUID	PROVIDERID
19	2	2
19	4	4
20	2	2
20	2	2
20	4	4
20	5	5
Table: IncTriggers
PID	CUID	BASEFILEID	DEFINERID	FOFFSET	LEN
19	4	4	2	471	4
20	4	4	2	471	4
20	5	5	2	471	4
Table: Functions
ID	NAME	ISMACRO	DEFINED	DECLARED	FILESCOPED	FID	FOFFSET	FANIN
49	a	0	0	1	0	4	4	1
279	main	0	1	1	0	4	27	0
509	e	0	0	1	0	4	50	0
891	foo	0	1	1	0	5	88	0
1059	b	0	1	1	0	4	105	1
1339	c	0	1	1	0	4	133	1
1619	d	0	1	1	0	4	161	0
2019	xa	0	1	1	0	4	201	2
2369	xa1	0	1	1	0	4	236	2
2509	xa2	0	1	1	0	4	250	1
2649	xa3	0	1	1	0	4	264	1
2749	xb2	0	1	1	0	4	274	1
2889	xb	0	1	1	0	4	288	1
3259	main2	0	1	1	0	4	325	0
5355	_cscout_dummy1	0	1	1	1	2	535	1
Table: FunctionDefs
FUNCTIONID	FIDBEGIN	FOFFSETBEGIN	FIDEND	FOFFSETEND
279	4	36	4	97
891	5	95	5	117
1059	4	110	4	120
1339	4	138	4	148
1619	4	166	4	176
2019	4	207	4	230
2369	4	243	4	244
2509	4	257	4	258
2649	4	271	4	272
2749	4	281	4	282
2889	4	294	4	316
3259	4	335	4	354
5355	2	557	2	577
Table: FunctionMetrics
FUNCTIONID	PRECPP	NCHAR	NCCOMMENT	NSPACE	NLCOMMENT	NBCOMMENT	NLINE	MAXLINELEN	MAXSTMTLEN	MAXSTMTNEST	MAXBRACENEST	MAXBRACKNEST	BRACENEST	BRACKNEST	NULINE	NPPDIRECTIVE	NPPCOND	NPPFMACRO	NPPOMACRO	NTOKEN	NSTMT	NOP	NUOP	NNCONST	NCLIT	NSTRING	NPPCONCATOP	NPPSTRINGOP	NIF	NELSE	NSWITCH	NCASE	NDEFAULT	NBREAK	NFOR	NWHILE	NDO	NCONTINUE	NGOTO	NRETURN	NASM	NTYPEOF	NPID	NFID	NMID	NID	NUPID	NUFID	NUMID	NUID	NLABEL	NMACROEXPANDTOKEN	NGNSOC	NMPARAM	NFPARAM	NEPARAM	FANIN	FANOUT	CCYCL1	CCYCL2	CCYCL3	CSTRUC	CHAL	IFLOW
279	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	10	0	0	1	NULL	NULL	NULL	NULL	NULL	NULL	NULL	26	6	0	0	1	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	1	0	0	4	0	NULL	5	3	0	NULL	4	0	NULL	13	NULL	0	NULL	0	3	1	1	1	0.0	13.9316	0.0
279	1	55	0	24	0	0	7	11	11	NULL	0	1	0	0	0	0	0	0	0	26	6	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	1	0	0	5	1	0	5	4	1	0	4	0	0	NULL	0	NULL	0	0	3	1	1	1	0.0	13.9316	0.0
891	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	0	0	0	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	1	0	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	0	0	NULL	0	0	NULL	28	NULL	0	NULL	0	0	1	1	1	0.0	0.0	0.0
891	1	23	15	4	1	0	2	18	0	NULL	0	0	0	0	0	0	0	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	NULL	0	0	0	1	1	1	0.0	0.0	0.0
1059	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	4	0	0	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	4	1	0	0	1	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	1	0	0	0	0	NULL	0	0	0	NULL	0	0	NULL	18	NULL	0	NULL	1	0	1	1	1	0.0	0.0	0.0
1059	1	6	0	2	0	0	0	0	4	NULL	0	0	0	0	0	0	0	0	0	4	1	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	NULL	0	1	0	1	1	1	0.0	0.0	0.0
1339	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	4	0	0	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	4	1	0	0	1	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	1	0	0	0	0	NULL	0	0	0	NULL	0	0	NULL	18	NULL	0	NULL	1	0	1	1	1	0.0	0.0	0.0
1339	1	6	0	2	0	0	0	0	4	NULL	0	0	0	0	0	0	0	0	0	4	1	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	NULL	0	1	0	1	1	1	0.0	0.0	0.0
1619	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	4	0	0	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	4	1	0	0	1	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	1	0	0	0	0	NULL	0	0	0	NULL	0	0	NULL	18	NULL	0	NULL	0	0	1	1	1	0.0	0.0	0.0
1619	1	6	0	2	0	0	0	0	4	NULL	0	0	0	0	0	0	0	0	0	4	1	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	NULL	0	0	0	1	1	1	0.0	0.0	0.0
2019	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	5	0	0	1	NULL	NULL	NULL	NULL	NULL	NULL	NULL	13	3	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	3	0	NULL	3	3	0	NULL	3	0	NULL	21	NULL	0	NULL	2	3	1	1	1	36.0	4.75489	36.0
2019	1	27	0	5	0	0	0	0	5	NULL	0	1	0	0	0	0	0	0	0	13	3	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	3	0	0	3	3	0	0	3	0	0	NULL	0	NULL	0	2	3	1	1	1	36.0	4.75489	36.0
2369	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	0	0	0	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	1	0	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	0	0	NULL	0	0	NULL	27	NULL	0	NULL	2	0	1	1	1	0.0	0.0	0.0
2369	1	2	0	1	0	0	0	0	0	NULL	0	0	0	0	0	0	0	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	NULL	0	2	0	1	1	1	0.0	0.0	0.0
2509	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	0	0	0	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	1	0	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	0	0	NULL	0	0	NULL	27	NULL	0	NULL	1	0	1	1	1	0.0	0.0	0.0
2509	1	2	0	1	0	0	0	0	0	NULL	0	0	0	0	0	0	0	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	NULL	0	1	0	1	1	1	0.0	0.0	0.0
2649	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	0	0	0	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	1	0	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	0	0	NULL	0	0	NULL	27	NULL	0	NULL	1	0	1	1	1	0.0	0.0	0.0
2649	1	2	0	1	0	0	0	0	0	NULL	0	0	0	0	0	0	0	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	NULL	0	1	0	1	1	1	0.0	0.0	0.0
2749	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	0	0	0	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	1	0	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	0	0	NULL	0	0	NULL	29	NULL	0	NULL	1	0	1	1	1	0.0	0.0	0.0
2749	1	2	0	1	0	0	0	0	0	NULL	0	0	0	0	0	0	0	0	0	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	NULL	0	NULL	0	1	0	1	1	1	0.0	0.0	0.0
2889	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	5	0	0	1	NULL	NULL	NULL	NULL	NULL	NULL	NULL	13	3	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	3	0	NULL	3	3	0	NULL	3	0	NULL	31	NULL	0	NULL	1	3	1	1	1	9.0	4.75489	9.0
2889	1	26	0	5	0	0	0	0	5	NULL	0	1	0	0	0	0	0	0	0	13	3	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	3	0	0	3	3	0	0	3	0	0	NULL	0	NULL	0	1	3	1	1	1	9.0	4.75489	9.0
3259	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	6	0	0	1	NULL	NULL	NULL	NULL	NULL	NULL	NULL	9	2	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	2	0	NULL	2	2	0	NULL	2	0	NULL	33	NULL	0	NULL	0	2	1	1	1	0.0	2.0	0.0
3259	1	22	0	9	0	0	3	8	7	NULL	0	1	0	0	0	0	0	0	0	9	2	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	2	0	0	2	2	0	0	2	0	0	NULL	0	NULL	0	0	2	1	1	1	0.0	2.0	0.0
5355	0	NULL	NULL	NULL	NULL	NULL	NULL	NULL	5	0	0	1	NULL	NULL	NULL	NULL	NULL	NULL	NULL	5	1	0	0	0	0	0	NULL	NULL	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	1	NULL	1	0	1	NULL	1	0	NULL	20	NULL	0	NULL	1	1	1	1	1	1.0	0.0	1.0
5355	1	22	0	3	0	0	1	21	5	NULL	0	1	0	0	0	0	0	0	0	5	1	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	1	0	1	0	1	0	1	0	0	NULL	0	NULL	0	1	1	1	1	1	1.0	0.0	1.0
Table: FunctionId
FUNCTIONID	ORDINAL	EID
49	0	49
279	0	279
509	0	509
891	0	891
1059	0	649
1339	0	719
1619	0	149
2019	0	2019
2369	0	2089
2509	0	2159
2649	0	2229
2749	0	2749
2889	0	2889
3259	0	3259
5355	0	5355
Table: Fcalls
SOURCEID	DESTID
279	49
279	1059
279	1339
2019	2369
2019	2509
2019	2649
2889	2019
2889	2369
2889	2749
3259	2019
3259	2889
5355	5355
Done
